--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dog</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit nam velit vel nisi sapiente eos veritatis error beatae? Ullam veniam eos ea? Velit, placeat dicta voluptates repellendus quos consectetur dolorum.</p>
+   
+    <div class="box">
+     <img class="dog" src="image/dog.webp" alt="dog">    
+
+    </div>
 </body>
 </html>
